<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Pssst</string>
    <string name="setting_default_box">Box</string>
    <string name="setting_api_address">Server</string>
    <string name="setting_user_directory">Storage</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_push">Push</string>
    <string name="hint_username">pssst.name</string>
    <string name="hint_password">••••••••</string>
    <string name="hint_message">Hello</string>
    <string name="button_start">Start</string>
    <string name="button_push">Push</string>
    <string name="button_positive">OK</string>
    <string name="notice_message_new">New Message</string>
    <string name="notice_message_pushed">Message pushed</string>
</resources>
