<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:weightSum="1"
        android:padding="8dp">

    <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user"
            android:singleLine="true" android:editable="true"
            android:hint="@string/hint_username"
            android:textStyle="bold"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/text" android:hint="@string/hint_message"
            android:linksClickable="false" android:gravity="top" android:layout_weight="1" android:editable="true"
            android:autoText="false"
            android:singleLine="false"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/push" android:singleLine="false"
            android:text="@string/button_push"/>

</LinearLayout>
