<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">

            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username" android:layout_gravity="center_horizontal|top"
                    android:hint="@string/hint_username" android:editable="true"
                    android:textStyle="bold"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password" android:layout_gravity="center_horizontal|top"
                    android:hint="@string/hint_password" android:editable="true"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/start" android:layout_gravity="center_horizontal"
                    android:text="@string/button_start"
                />
        </LinearLayout>

</FrameLayout>
